# epiphany

./: .cvsignore  .eslintrc  .gitignore  .gitlab-ci.yml  .gitmodules  .run-scan-build  0001-Remove-epiphany-styling.patch  AUTHORS  CONTRIBUTING.md  COPYING  COPYING.README  ChangeLog  ChangeLog-20030925  ChangeLog-20040912  ChangeLog-20050828  ChangeLog-20070912  ChangeLog.README  HACKING  HACKING.md  MAINTAINERS  Makefile.am  NEWS  README  README.Python  README.md  TODO  acconfig.h  autogen.sh  compute-tech-preview-version.sh  configure.ac  configure.in  ephy-0002-Enable-back-forward-gestures.patch  ephy-vcs-version.h.in  epiphany.doap  epiphany.spec  eslint.config.js  generate-canary-manifest.py  make_release.sh  meson.build  meson_options.txt  (+7 more)
data/: .cvsignore  GNOME_Epiphany_Automation.server.in  GNOME_Epiphany_NautilusView.server.in  Makefile.am  about.ini  bme.desktop.in  bme.desktop.in.in  check-code-style  check-mime.py  check-potfiles  conspiracy.xhtml  default-bookmarks.rdf.in  default-prefs-common.js  default-prefs-gecko-1-8.js  default-prefs-mozilla.js  default-prefs-toolkit.js  default-prefs.js  ephy-network-manager.xml  ephy-xml2ini.xsl  epiphany-1.2.pc.in  epiphany-1.4.pc.in  epiphany-1.6.pc.in  epiphany-1.8.pc.in  epiphany-bookmarks-html.xsl  epiphany-extension.xsd  epiphany-fonts.schemas  epiphany-lockdown.schemas.in  epiphany-pango.schemas  epiphany-search-provider.ini  epiphany-service.xml  epiphany.1  epiphany.1.rst  epiphany.appdata.xml.in  epiphany.applications  epiphany.convert  epiphany.desktop.in  epiphany.desktop.in.in  epiphany.html  epiphany.m4  epiphany.pc.in  (+30 more)
data/art/: Makefile.am
data/chrome/: .cvsignore  Makefile.am  about.xhtml  app-chrome.manifest.in  brand.dtd.in  brand.properties.in  epiphany.manifest.in  netError.dtd
data/glade/: Makefile.am  certificate-dialogs.glade  certificate-dialogs.ui  certs-manager.glade  epiphany.glade  epiphany.ui  form-signing-dialog.glade  form-signing-dialog.ui  prefs-dialog.glade  prefs-dialog.ui  print.glade  print.ui  prompts.glade  toolbar-editor.glade
data/icons/: Makefile.am  README  hicolor_actions_22x22_bookmark-view.xcf  hicolor_status_22x22_popup-hidden.xcf
data/pages/: Makefile.am  about.css  error.css  error.html
data/starthere/: .cvsignore  Makefile.am  index.xml.in  section.css  section.xsl  smartbookmarks.xml.in
data/ui/: .cvsignore  Makefile.am  certificate-dialogs.ui  epiphany-fs-toolbar.xml  (+16 more)
embed/: .cvsignore  Makefile.am  downloader-view.c  downloader-view.h  ephy-about-handler.c  ephy-about-handler.h  ephy-adblock-extension.c  ephy-adblock-extension.h  ephy-adblock-manager.c  ephy-adblock-manager.h  ephy-adblock.c  ephy-adblock.h  ephy-auth-dialog.c  ephy-auth-dialog.h  ephy-base-embed.c  ephy-base-embed.h  ephy-browse-history.c  ephy-browse-history.h  ephy-certificate-manager.c  ephy-certificate-manager.h  ephy-client-certificate-manager.c  ephy-client-certificate-manager.h  ephy-command-manager.c  ephy-command-manager.h  ephy-cookie-manager.c  ephy-cookie-manager.h  ephy-document-view.c  ephy-document-view.h  ephy-download.c  ephy-download.h  ephy-downloads-manager.c  ephy-downloads-manager.h  ephy-embed-autofill.c  ephy-embed-autofill.h  ephy-embed-container.c  ephy-embed-container.h  ephy-embed-dialog.c  ephy-embed-dialog.h  ephy-embed-event.c  ephy-embed-event.h  (+109 more)
gvdb/: Makefile.am  gvdb-builder.c
help/: ChangeLog  ChangeLog.pre-2-23  LINGUAS  Makefile.am  meson.build
lib/: .cvsignore  Makefile.am  eel-gconf-extensions.c  eel-gconf-extensions.h  ephy-adblock.c  ephy-adblock.h  ephy-autocompletion-source.c  ephy-autocompletion-source.h  ephy-autocompletion.c  ephy-autocompletion.h  ephy-bonobo-extensions.c  ephy-bonobo-extensions.h  ephy-bookmark-states.h  ephy-dbus-names.h  ephy-dbus-util.c  ephy-dbus-util.h  ephy-dbus.c  ephy-dbus.h  ephy-debug.c  ephy-debug.h  ephy-dialog.c  ephy-dialog.h  ephy-dnd.c  ephy-dnd.h  ephy-encodings.c  ephy-encodings.h  ephy-favicon-helpers.c  ephy-favicon-helpers.h  ephy-file-chooser.c  ephy-file-chooser.h  ephy-file-dialog-utils.c  ephy-file-dialog-utils.h  ephy-file-helpers.c  ephy-file-helpers.h  ephy-filesystem-autocompletion.c  ephy-filesystem-autocompletion.h  ephy-filters-manager.c  ephy-filters-manager.h  ephy-flatpak-utils.c  ephy-flatpak-utils.h  (+120 more)
src/: .cvsignore  Makefile.am  adblock-ui.c  adblock-ui.h  appearance-prefs.c  appearance-prefs.h  clear-data-dialog.c  clear-data-dialog.h  context-menu-commands.c  context-menu-commands.h  cookies-dialog.c  cookies-dialog.h  ephy-action-bar-end.c  ephy-action-bar-end.h  ephy-action-bar-start.c  ephy-action-bar-start.h  ephy-action-bar.c  ephy-action-bar.h  ephy-action-helper.c  ephy-action-helper.h  ephy-activation.c  ephy-activation.h  ephy-adaptive-mode.h  ephy-adblock-extension.c  ephy-add-bookmark-popover.c  ephy-add-bookmark-popover.h  ephy-add-opensearch-engine-button.c  ephy-add-opensearch-engine-button.h  ephy-application.c  ephy-application.h  ephy-automation.c  ephy-automation.h  ephy-bookmark-properties-grid.c  ephy-bookmark-properties-grid.h  ephy-bookmark-row.c  ephy-bookmark-row.h  ephy-bookmark.c  ephy-bookmark.h  ephy-bookmarks-manager.c  ephy-bookmarks-manager.h  (+247 more)
tests/: Makefile.am  ephy-bookmarks-test.c  ephy-completion-model-test.c  ephy-download-test.c  ephy-download.c  ephy-embed-persist.c  ephy-embed-shell-test.c  ephy-embed-single-test.c  ephy-embed-single.c  ephy-embed-utils-test.c  ephy-embed-utils.c  ephy-encodings-test.c  ephy-file-helpers-test.c  ephy-gsb-service-test.c  ephy-gsb-utils-test.c  ephy-history-test.c  ephy-history.c  ephy-location-entry-test.c  ephy-location-entry.c  ephy-migration-test.c  ephy-search-engine-manager-test.c  ephy-search-entry-test.c  ephy-search-entry.c  ephy-session-test.c  ephy-shell-test.c  ephy-snapshot-service-test.c  ephy-sqlite-test.c  ephy-string-test.c  ephy-test-utils.c  ephy-test-utils.h  ephy-uri-helpers-test.c  ephy-web-app-utils-test.c  ephy-web-extension-test.c  ephy-web-view-test.c  ephy-zoom-control.c  invariant_ephy_autofill.test.js  meson.build  testephyembedpersist.c  testephyembedsingle.c  testephyiconentry.c  (+3 more)
(+1313 files in other folders)
